# chesslab

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  pyproject.toml
paper/: abstract_aggreey_2026.tex  chesslab_paper.tex  chesslab_paper_aamas.tex  chesslab_paper_ec26.tex  chesslab_paper_scala26.tex  references.bib  sample-ec-submission.tex
src/chesslab/: env.py
src/chesslab/analysis/: analyze_campaign.py  analyze_game.py  analyze_match.py  analyze_range.py  ballot_tools.py  campaign.py  centipawn_analysis.py  chesslab_typing.py  elo_tools.py  evaluator.py  game.py  logging_config.py  match.py  stat_tools.py  stockfish_tools.py  tournament.py
src/chesslab/arena/: async_tools.py  init_engines.py  play_move.py  run_game.py  run_match.py  run_stockfish_range.py
src/chesslab/engines/: __init__.py  aggregators.py  base_engine.py  compile_engines.py  init_engines.py  llm.py  llm_engine.py  llm_tools.py  maia_engine.py  options.py  random_engine.py  random_protocol.py  storage_tools.py  voting_engine.py
src/chesslab/engines/options/: aggregators.py  parsers.py  prompt_variables.py  prompts.py
src/chesslab/experiment/: aggregation_variation.py  centipawn_loss_maia.py  coherence_madchess.py  coherence_maia.py  coherence_stockfish.py  distillate_maia.py  distillate_stockfish.py  engine_variation.py  llm_prompt.py  maia_on_madchess.py  maia_on_stockfish.py  majority_voting.py  mean_variation.py  size_variation.py  std_dev_variation.py  stockfish_on_madchess.py  verify_maia.py  verify_stockfish.py  voting_madchess.py
src/chesslab/experiment/results/centipawn_loss_maia/: centipawn_loss_report_maia1100.txt  centipawn_loss_report_maia1900.txt
src/chesslab/experiment/results/llm_prompt/: player_58.txt  player_59.txt  player_60.txt
src/chesslab/experiment/results/majority_voting/: crowd.txt  player_43.txt  player_44.txt  player_45.txt  player_46.txt  player_54.txt  player_55.txt  player_56.txt  player_57.txt
src/chesslab/experiment/results/verify_stockfish/: player_2.txt  player_3.txt  player_4.txt
src/chesslab/experiment/results/voting_madchess/: crowd.txt  crowd_1100.txt
src/chesslab/storage/: __init__.py  db_tools.py  evaluation_tools.py  game_tools.py  move_tools.py  pgn_tools.py  player_tools.py  request_tools.py  schema.py  setup_db.py
