[project]
name = "chesslab"
version = "0.1.0"
description = "Modular chess engine testing framework"
readme = "README.md"
authors = [
    { name = "Uspectacle", email = "super.mario.larsen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "numpy>=2.1.2",
    "psycopg2-binary>=2.9.11",
    "python-chess>=1.999",
    "python-dotenv>=1.2.1",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "torch==2.6.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
